DOC - Major Updates

--- a/Doc/Bachelor Thesis/FormatsAndDefs.tex
+++ b/Doc/Bachelor Thesis/FormatsAndDefs.tex
@@ -30,9 +30,11 @@
 \usepackage{algorithmicx}
 \usepackage{algorithm}
 \usepackage[noend]{algpseudocode}
+\usepackage{pdfpages}
 
 \newcommand*{\fullref}[1]{\hyperref[{#1}]{\ref*{#1} \nameref*{#1}}}
 \newcommand*{\algoref}[1]{\hyperref[{#1}]{\nameref{#1}}}
+\newcommand{\imgref}[1]{\hyperref[{#1}]{Obr. \ref*{#1}}}
 \def\hyph{-\penalty0\hskip0pt\relax}
 
 % Definitions for C# code colors
