--- a/Doc/Bachelor Thesis/declaration.tex
+++ b/Doc/Bachelor Thesis/declaration.tex
@@ -3,8 +3,8 @@
 \vspace*{15cm} 
 \begin{large}
 \noindent
-\textbf{ACKNOWLEDGMENTS} \\
-%\textbf{POĎAKOVANIE} \\
+%\textbf{ACKNOWLEDGMENTS} \\
+\textbf{POĎAKOVANIE} \\
 \end{large}
 \noindent
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.....
@@ -13,11 +13,10 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 \vspace*{15cm} 
 \begin{large}
 \noindent
-\textbf{DECLARATION} \\
-%\textbf{ČESTNÉ PREHLÁSENIE} \\
+%\textbf{DECLARATION} \\
+\textbf{ČESTNÉ PREHLÁSENIE} \\
 \end{large}
 \noindent
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua....\\
-\vspace*{0.5cm}\\
+Čestne prehlasujem, že bakalársku prácu s názvom: Spracovanie učebných textov som vypracoval samostatne, na základe konzultácií a štúdia odbornej literatúry. Neporušila som autorský zákon a zoznam použitej literatúry som uviedol na príslušnom mieste.\vspace*{0.5cm}\\
 \hspace*{10cm}............................\\
 \hspace*{10.7cm} \Author
