--- a/Doc/Bachelor Thesis/main.tex
+++ b/Doc/Bachelor Thesis/main.tex
@@ -157,6 +157,7 @@ pdfkeywords={key words},%
 %% References
 %%
 \newpage
+\renewcommand{\refname}{Zoznam použitej literatúry}
 \addcontentsline{toc}{section}{\refname}
 \bibliographystyle{plain}
 \bibliography{references}
