--- a/Doc/Bachelor Thesis/anotation.tex
+++ b/Doc/Bachelor Thesis/anotation.tex
@@ -22,7 +22,7 @@ Vedúci práce: \Supervisor \\
 \Month \Year \\
 \noindent
 \\
-Sme zavalení množstvom informácií z rôznych zdrojov. Vo výučbe je náročné vytvoriť poznámky, ktoré zahŕňajú podmnožinu dôležitých informácií zo zdroja. Existuje niekoľko spôsobov, ako extrahovať informácie z textu. V tejto práci navrhujeme systém na extrakciu poznámok z textu, ktoré sú dôležité z pohľadu výučby, a bude umožní študentom vytvárať si personalizované poznámky. Využívame hlavne syntaktickú analýzu textu. Poznámky sa vytvárajú pomocou využitie značiek slovných druhov a závislostí medzi slovami vo vetách. Výsledkom je interaktívny systém na tvorbu poznámok, na základe pravidiel naučených od používateľa.
+Sme zavalení množstvom informácií z rôznych zdrojov. Vo výučbe je náročné vytvoriť poznámky, ktoré zahŕňajú podmnožinu dôležitých informácií zo zdroja. Existuje niekoľko spôsobov, ako extrahovať informácie z textu. V tejto práci navrhujeme systém na extrakciu informácií a tvorbu poznámok z textu, ktoré sú dôležité z pohľadu výučby, a umožní študentom vytvárať personalizované poznámky. Využívame hlavne syntaktickú analýzu textu. Poznámky sa vytvárajú pomocou využitia značiek slovných druhov a závislostí medzi slovami vo vetách. Výsledkom je interaktívny systém na tvorbu poznámok, ktoré sa vytvárajú na základe pravidiel naučených od používateľa.
 \newpage
 \thispagestyle{plain}
 \begin{center}
